fixed layout issues tablet Featured component

--- a/src/app/components/home-featured/home-featured.component.scss
+++ b/src/app/components/home-featured/home-featured.component.scss
@@ -92,13 +92,13 @@ $red: #DF5656;
                 }
             }
             h1 {
-                @media screen and (max-width: 1080px) {
+                @media screen and (max-width: 1500px) {
                     position: absolute;
                     top: 330%;
                     left: 70%;
                     font-size: 150px;
                 }
-                @media screen and (max-width:756px) {
+                @media screen and (max-width:900px) {
                     display: none;
                     position: absolute;
                     left: 30%;
